[tool.poetry]
name = "fst-pso3"
version = "0.1.0"
description = ""
authors = ["Matteo <matteo.savina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
miniful = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
